# parallel_distance_oracle

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.gcc  README.md  basic_run.sh  pado  pado.args.cpp  pado.cpp  pado.optrpt  query_distance  query_distance.cpp  test.sh
distributed_version/: CMakeLists.txt  dpado.cpp  test.sh
distributed_version/includes/: dglobals.h  dgraph.h  dpado.202001011226.openmp.h  dpado.202001060737.multiple_rounds_for_memory.h  dpado.202001130915.no_batch_id.h  dpado.202001141642.batch_number_limit.h  dpado.202001172040.local_minimum_reduction.h  dpado.202001231035.multiple_rounds_for_checking.h  dpado.202001232110.limit_distances.h  dpado.202001272104.batch_id_back.h  dpado.202001280935.single_push_and_check.h  dpado.202001292043.MAX_UNWEIGHTED_DIST_define.h  dpado.h  dpado.mpi-bug.h  mpi_dpado.h  utils.h
distributed_version/includes/deprecated/: dpado.202001071517.push_back_ShortIndex.h  dpado.202001080943.clean_up_labels.h  dpado.202001231600.no_bp_and_limit_batches.h  dpado.202001310955.no_bp_labeling.h
distributed_version/scripts/: pseudocode_remove_equivalent_vertices.cpp
distributed_version/tools/: CMakeLists.txt
distributed_version/tools/file-creator/: CMakeLists.txt  createfile.cpp
distributed_version/tools/graph-convert/: CMakeLists.txt  binary2edgelist.cpp  edgelist2binary.cpp  remove_equivalent_vertices.202001191625.bak.cpp  remove_equivalent_vertices.cpp
includes/: Vertex-centric Labeling for Weighted Graph Algorithm.md  avx512_pado.h  collections.tar.bz2  globals.bak.32-bit_int_weight.h  globals.h  graph.h  index.20181218.deprecated.h  index.20190207.structure_for_distance_query.h  index.h  index.vertices_vector_and_distances_vector.h  pado.20180918.try_to_label_roots_first.h  pado.20180920.last_and_candidate_bit_arrays.h  pado.20180922.not_sure_what_is_wrong.h  pado.20180925.last_vector_and_candidate_bitarray_and_dist-matrix.h  pado.20180925.struct_total_wrong.h  pado.20180930.new_struct_but_a_little_slower_than_pll.h  pado.20181001.global_shortest_distance_and_local_batch_highest_rank.h  pado.20181002.put_adding_into_pushing_but_not_even_work.h  pado.20181003.initialization_optimization_and_better_than_pll_no_bit_parallel.h  pado.20181005.bit_parallel_but_initialization_costs_lots_so_slower_than_PLL.h  pado.20181006.optimized_initialization_with_queue_of_activated_vertices.h  pado.20181006.profile.optimized_initialization_with_queue_of_activated_vertices.h  pado.20190130.tmp.candidates_bitmap.h  pado.20190130.vectorization.h  pado.20190201.vec_with_extra_label_array.h  pado.20190203.bp_checking_vec.h  pado.20190207.seq_3-level-label_DQ.h  pado.20190208.vec_3-level-label_DQ.h  pado.h  pado_para.20181022.also_bottom_up.h  pado_para.20181106.tmp.scalability.h  pado_para.20181112.tmp.parallel_bp.h  pado_para.20181112.tmp.parallel_bp_for_backup.h  pado_para.20181115.tmp.parallel_bp.h  pado_para.20190129.candidates_que.h  pado_para.20190205.vec_DQ_vec_BPC.h  pado_para.h  pado_para.tmp.full_bp_parallel.h  pado_para.tmp.miss_rate_profile.h  pado_para.tmp.off_bp_parallel.h  (+44 more)
pado.dSYM/Contents/: Info.plist
pado.dSYM/Contents/Resources/DWARF/: pado
scripts/: generate_weighted_graph.sh  get_datasets.sh  set_graphs_for_ParaPLL.sh
tools/: 1_w_edgelist.in  7_w_edgelist.in  binary_edgelist.in  delete_1-degree_vertices  deleted_graph.in  edgelist.in  graph.py  memory.sh  output.query.edgelist.in  pll_vs_pado.sh  print_free_memory.sh  pseudocode-delete_1-degree_vertices.cpp  query.chicago.in  query.dblp.in  query.wikitalk.in  rectangle.in  run.sh  square.in  test.sh  vcpll-pseudocode.cpp  vtune_collect.sh  weighted_edgelist.in
